# gestionnaire-etudiants_cpp

./: CMakeLists.txt  main.cpp  readme.md
Rapport/: TP8_Arithmétique-pointeurs.md  TP8_Pointeurs.md
include/: demonstration_pointeur.hpp  etudiant.hpp  gestion_etudiants.hpp  utils_io.hpp
src/: demonstration_pointeur.cpp  etudiant.cpp  gestion_etudiants.cpp  utils_io.cpp
